# launcher

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/: launcher.qrc  launcher.rc  resource.h
src/: CMakeLists.txt  main.cpp
src/app/: HotkeyManager.cpp  HotkeyManager.h  Launcher.cpp  Launcher.h
src/common/: Action.h  Constants.h  IModule.h  ResultItem.h
src/core/: ConfigLoader.cpp  ConfigLoader.h  ConfigManager.cpp  ConfigManager.h  HistoryManager.cpp  HistoryManager.h  HotkeyManager.cpp  HotkeyManager.h  ThemeManager.cpp  ThemeManager.h
src/modules/: AppsSearch.cpp  AppsSearch.h  Calculator.cpp  Calculator.h  EverythingSearch.cpp  EverythingSearch.h  IModule.h  LauncherCommands.cpp  LauncherCommands.h  SystemCommands.cpp  SystemCommands.h  UnitConverter.cpp  UnitConverter.h  WindowsTerminal.cpp  WindowsTerminal.h
src/utils/: DialogUtils.cpp  DialogUtils.h  ProcessUtils.cpp  ProcessUtils.h
src/widgets/: ResultItemDelegate.cpp  ResultItemDelegate.h  ResultItemWidget.cpp  ResultItemWidget.h
